# githttp-fs

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PACKAGING.md  README.md  TODO.md  config.toml
.github/workflows/: build.yml
debian/: changelog  control  copyright  flavio.install  flavio.postinst  flavio.service  githttp-fs.install  githttp-fs.postinst  githttp-fs.service  rules
dev/workspaces/: flavio-http-api.paw  githttp-fs-api.paw
scripts/: build_packages.sh  release_binaries.sh
src/: config.rs  error.rs  git.rs  hooks.rs  main.rs  middleware.rs  state.rs  util.rs  validate.rs
src/routes/: commits.rs  files.rs  mod.rs  tenant.rs
