[package]
name = "flavio"
version = "0.1.0"
edition = "2021"
description = "A git-backed content management database served over HTTP"
license = "MIT"

[[bin]]
name = "flavio"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
