[package]
name = "githttp-fs"
version = "1.0.2"
description = "A git-backed content management database served over HTTP"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/crisp-oss/githttp-fs"
repository = "https://github.com/crisp-oss/githttp-fs.git"
keywords = ["git", "cms"]
categories = ["database-implementations"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]
exclude = ["dev/*"]

[[bin]]
name = "githttp-fs"
path = "src/main.rs"
doc = false

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
debug-assertions = false
strip = true
